# resumeteor-mcp

./: .gitignore  INSTALL.md  LICENSE  README.md  SHARING.md  pyproject.toml  requirements.txt
.claude/commands/: capture-job.md  critique.md  new-job.md  refresh-general.md  tailor.md
.github/workflows/: ci.yml
docs/: index.html  install.html
resumeteor_mcp/: __init__.py  app_launcher.py  server.py
scripts/: build_resume.py  capture_job.py  init_dossier.py  job_validation.py  lint_resume.py  new_job.py  render.py  status.py  tailor_targets.py  yaml_path.py
templates/kitchen-sink/: narrative.md  profile.yaml
tests/: conftest.py  test_app.py  test_edit.py  test_lint.py  test_status.py
ui/: app.py
ui/static/: style.css
ui/templates/: base.html  dossier.html  general.html  index.html  job.html
